test dei non autorizzati è ok